# zendoo-sc-cryptolib

./: Cargo.toml  build_jar.sh
api/: Cargo.toml
api/src/: ginger_calls.rs  lib.rs
circuits/: Cargo.toml
circuits/src/: extendable_tx_circuit.rs  lib.rs
circuits/src/base_gadgets/: bit_vector_tree.rs  mod.rs  sc_utxo_tree.rs  transition.rs
circuits/src/base_tx_circuit/: bit_vector_tree.rs  constants.rs  mod.rs  transition.rs
circuits/src/base_tx_circuit/base_tx_primitives/: transaction.rs
circuits/src/base_tx_circuit/gadgets/: bit_vector_tree.rs  mod.rs  sc_utxo_tree.rs  transaction.rs  transition.rs
circuits/src/base_tx_circuit/primitives/: mod.rs  transaction.rs
circuits/src/demo_circuit/: mod.rs
circuits/src/demo_circuit/constants/: mod.rs
circuits/src/demo_circuit/naive_threshold_sig/: mod.rs  tests.rs
circuits/src/rules/: boxes_state_transitions.rs  mod.rs  tx_balance.rs  tx_in_tree.rs  tx_signatures.rs
circuits/src/snark_builder/: mod.rs
circuits/src/snark_builder/rules/: mod.rs
circuits/src/snark_builder/rules/tx_in_tree/: core.rs  mod.rs
circuits/src/snark_builder/rules/tx_signature/: core.rs  mod.rs
circuits/src/snark_builder/rules/tx_state_transition/: core.rs  mod.rs
circuits/src/transaction/: constraints.rs  mod.rs
circuits/src/transaction/core_transaction/: constraints.rs  mod.rs
circuits/src/transaction_box/: constraints.rs  mod.rs
circuits/src/transaction_box/base_coin_box/: constraints.rs  mod.rs
circuits/src/transaction_box/zen_box/: constraints.rs  mod.rs
jni/src/main/java/com/horizen/librustsidechains/: FieldElement.java
jni/src/main/java/com/horizen/poseidonnative/: PoseidonHash.java
jni/src/main/java/com/horizen/schnorrnative/: SchnorrPublicKey.java  SchnorrSecretKey.java  SchnorrSignature.java
jni/src/main/java/com/horizen/sigproofnative/: NaiveThresholdSigProof.java
jni/src/main/java/com/horizen/vrfnative/: VRFProof.java  VRFPublicKey.java  VRFSecretKey.java
jni/src/test/java/com/horizen/schnorrnative/: SchnorrKeyPairTest.java
jni/src/test/java/com/horizen/vrfnative/: VRFKeyPairTest.java
ouroboros/: Cargo.toml
ouroboros/src/vrf/: mod.rs
src/: ginger_calls.rs  lib.rs
