[package]
name = "api"
version = "0.1.0"
authors = ["DanieleDiBenedetto <daniele@horizenlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = {version = "0.1.0", features = ["llvm_asm"], git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all" }
primitives = {version = "0.1.0", features = ["bn_382"], git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all"}
proof-systems = {version = "0.1.0", features = ["groth16"], git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all" }

jni = "0.6.1"
derivative = "1"
lazy_static = "1"
radix_trie = "0.1"
rand = { version = "0.7" }
rand_xorshift = { version = "0.2" }

[lib]
name = "zendoo_sc"
path = "src/lib.rs"
crate_type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = "unwind"

[profile.dev]
opt-level = 0
panic = "unwind"

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = "unwind"