[package]
name = "circuits"
version = "0.1.0"
authors = ["DanieleDiBenedetto <daniele@horizenlabs.io>"]
edition = "2018"
include = ["Cargo.toml", "src"]

[dependencies]
algebra = {version = "0.1.0", features = ["llvm_asm"], git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all" }
primitives = {version = "0.1.0", features = ["signature", "smt", "mnt4_753", "mnt6_753"], git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all" }
r1cs-crypto = {version = "0.1.0", features = ["signature", "merkle_tree", "mnt4_753", "mnt6_753"], git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all" }
r1cs-core = {version = "0.1.0", git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all"}
r1cs-std = {version = "0.1.0", features = ["mnt4_753", "mnt6_753"], git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all"}
proof-systems = {version = "0.1.0", features = ["groth16"], git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all"}

derivative = "1"
lazy_static = "1"
radix_trie = "0.1"
rand = { version = "0.7" }

[dev-dependencies]
digest = "0.7"
blake2s_simd = "0.5"
bit-vec = "0.6.1"
primitives = {version = "0.1.0", features = ["smt"], git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all" }