[package]
name = "ouroboros"
version = "0.1.0"
authors = ["DanieleDiBenedetto <daniele@horizenlabs.io>"]
edition = "2018"

[dependencies]
algebra = {version = "0.1.0", git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all"}
primitives = {version = "0.1.0", features = ["vrf", "mnt4_753", "mnt6_753"], git = "https://github.com/ZencashOfficial/ginger-lib.git", branch = "all"}
rand = { version = "0.7" }

